chore: improve wildcard handling to fix all types of groups (#626)